--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <br> ที่ nstda นี่ แก้หลายรอบมาก  ส่วนที่สภากาชาดนั้น แทบไม่ต้องกังวลเรื่อง
     <br> เอกสารเลย คือไปทำเอาอีกทีตอน as buit drawings
     <br> :(  พักสงบด้วยการหัดเขียนโค้ด และเอาลูกนอนหลับ  สู้กันต่อไป ดีกว่าตกงานมากมายนัก
-  
+    <br> ทดลองพิมพ์เพิ่มเติมใน github.com
   </p>
 
 
