--- a/index.html
+++ b/index.html
@@ -4,74 +4,88 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>20220825 diary</title>
+  <title>3D Model Link</title>
 
-  
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Thasadith&display=swap" rel="stylesheet">
 
+
   <style>
     p {
-      margin-left: 30px;
-      font-family: 'Thasadith', sans-serif;
-      font-size: large;
-    }
-
-    .top-button {
-      background-color: white;
+      margin-top: 50px;
+      margin-left: 50px;
       color: black;
-      border-radius: 12px;
-      width: 120px;
-      height: 30px;
-      border-color: rgb(26, 25, 25);
-      border: none;
-      margin-left: 60px;
-      margin-top: 1em;
+    }
+   .model-button {
       font-size: larger;
-      font-family: Thasadith, sans-serif;
-
-    }
-    .top-button:hover {
-      background-color: rgb(226, 223, 223);
-      color: black;
-      border-radius: 12px;
+      color: white;
+      background-color: rgb(106, 106, 219);
+      margin-left: 50px;
+      width: 350px;
+      height: 50px;
+      border-radius: 20px;
       border: none;
-      width: 120px;
-      height: 30px;
-      border-color: rgb(26, 25, 25);
-      border-color: rgb(77, 75, 75);
-      margin-left: 50%;
-      margin-top: 1em;
-      cursor: pointer;
-      font-family: Thasadith, sans-serif;
+      
     }
+    .main-hvac-button {
+      font-size: large;
+      columns: white;
+      background-color: rgb(106, 106, 219);
+      margin-left: 50px;
+      width: 350px;
+      height: 50px;
+      border-radius: 20px;
+      border: none;
+      color: white;
+    }
+    .main-hvac-button:hover {
+      font-size: large;
+      columns: white;
+      background-color: rgb(106, 106, 219);
+      margin-left: 50px;
+      width: 350px;
+      height: 50px;
+      border-radius: 20px;
+      border: none;
+      color: white;
+      opacity: 0.8;
+    }
+
+
+    .process-hvac-button {
+      font-size: large;
+      columns: white;
+      background-color: rgb(106, 106, 219);
+      margin-left: 50px;
+      width: 350px;
+      height: 50px;
+      border-radius: 20px;
+      border: none;
+      color: white;
+      opacity: 0.8;
+    }
+
   </style>
 </head>
 <body>
-  <button class="top-button">ไดอารี่วันนี้</button>
-  <p>
-    วันพฤหัสบดีที่ ๒๕ สิงหาคม ๒๕๖๕ <br>
-    ทดลองบันทึกไดอารี่ใน html <br>
-    <br>
-    ตอนนี้เกือบจะหนึ่งทุ่มแล้ว <br>
-    ไปรับลูก กลับถึงบ้าน อาบนาบเรียบร้อยทั้งสองคน
-    <br>
-    ทดลองพิมพ์และกำหนดฟอนต์ไทย โดยอ่านข้อมูลจาก <br>
-    <a href="https://devbanban.com/?p=3870">Devbanban</a>
-    <br> เขาสอนวิธีการให้ฟอนต์แสดงแบบต่าง ๆ ที่เราต้องการ
-    <br> ในหน้าจอนี้น่าจะแสดง font-family แบบ Thasadith
-    <br> สนุกดี
-    <br> ตอนนี้กำลังจะลองเอาโค้ดที่พิมพ์นี้ไปใส่ใน blogger ว่าจะแสดงฟอนต์ที่ต้องการไหม
-    <br>
-    <br> อีกหนึ่งนาทีจะสามทุ่ม  คาดว่างานจะไม่เสร็จ  งานไอโซ ไม่ใช่เรื่องความยาก แต่
-    <br> เป็นเรื่องความเยอะ  ข้อแตกต่างของไอโซที่ nstda กับที่ สภากาชาดก็คือ
-    <br> ที่ nstda นี่ แก้หลายรอบมาก  ส่วนที่สภากาชาดนั้น แทบไม่ต้องกังวลเรื่อง
-    <br> เอกสารเลย คือไปทำเอาอีกทีตอน as buit drawings
-    <br> :(  พักสงบด้วยการหัดเขียนโค้ด และเอาลูกนอนหลับ  สู้กันต่อไป ดีกว่าตกงานมากมายนัก
-    <br> ทดลองพิมพ์เพิ่มเติมใน github.com
-  </p>
-
-
+    <br><br>
+    <button class="model-button">
+      Model updated on 20220826 <br>
+    </button>
+    <br><br>
+    <button class="main-hvac-button">
+      <a href='https://autode.sk/3wwxPPk'>
+      hilighted on MAIN HVAC click to see
+    </a>
+    </button>
+    <br><br>
+    <button class="process-hvac-button">
+    <a href='https://autode.sk/3CGBHku'>
+      hilighted on PROCESS HVAC click to see
+    </a>
+    <p>
+      **update every friday on evening for model on autodesk viewer
+    </p> 
 </body>
 </html>
